# ai-intensive-project

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md
day01-voice-assistant/: .env.example  README.md  app.py  main.py  requirements.txt  tools.py
day01-voice-assistant/.streamlit/: config.toml  secrets.toml.example
day01-voice-assistant/speech_input/: __init__.py  index.html
team-project-lg/: DEPLOY.md  PLANNING.md  README.md  STATUS.md
team-project-lg/backend/: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
team-project-lg/backend/app/: config.py  data_loader.py  main.py
team-project-lg/backend/app/data/: events.json  rooms.json  scenarios.json  scoring_rules.json
team-project-lg/backend/app/data/cached_responses/: guest_incoming_v1.json  post_cooking_v1.json  pre_sleep_v1.json  rainy_return_v1.json
team-project-lg/backend/app/routers/: events.py  health.py  scenarios.py  simulate.py
team-project-lg/backend/app/schemas/: event.py  room.py  scenario.py  simulation.py
team-project-lg/backend/app/services/: cache.py  context_builder.py  llm_explainer.py  scoring.py
team-project-lg/backend/scripts/: seed_cache.py
team-project-lg/backend/tests/: test_custom_simulate.py  test_health.py  test_llm_cache.py  test_scoring.py
team-project-lg/docs/: MOCK_DATA_SCHEMA.md  PRD.md  SCORING_RULES.md  TECH_STACK.md  TRD.md
team-project-lg/exports/: add_pagebreak_before_heading.py  check_rowheight.py  compress_and_flow.py  debug_p1.py  docx_structure.txt  fill_docx.py  fix_font_keepnext.py  fix_keepnext_v2.py  fix_rowheight.py  fix_widths.py  (+4 more)
(+26 files in other folders)
